--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -42,17 +42,17 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
     <link href="../faq/index.xml" rel="alternate" type="application/rss+xml" title="4 常见问题 :: HaBox 技术支持站">
     <link href="../faq/index.print.html" rel="alternate" type="text/html" title="4 常见问题 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1734749095" rel="stylesheet">
-    <link href="../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
-    <link href="../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734749095" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1734749095" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1734749095" rel="stylesheet">
-    <link href="../css/print.css?1734749095" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1734749095"></script>
+    <link href="../css/fontawesome-all.min.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1735609162" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1735609162" rel="stylesheet">
+    <link href="../css/auto-complete.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1735609162" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1735609162" rel="stylesheet">
+    <link href="../css/fonts.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1735609162" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1735609162" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1735609162" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1735609162" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1735609162" rel="stylesheet">
+    <link href="../css/print.css?1735609162" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1735609162"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -148,8 +148,8 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 <p>在ha提示符后面执行</p>
 </li>
 </ol>
-<div class="highlight wrap-code"><pre tabindex="0"><code>authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;</code></pre></div><p><a href="#R-image-d0ea015110f9f8ed97f30065f6ab8733" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d0ea015110f9f8ed97f30065f6ab8733"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></p>
+<div class="highlight wrap-code"><pre tabindex="0"><code>authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;</code></pre></div><p><a href="#R-image-b6118c9d403d566a5a5ccfe9db97f86d" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b6118c9d403d566a5a5ccfe9db97f86d"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></p>
 <p>再回到<a href="http://homeassistant.local:8123" rel="external" target="_self">http://homeassistant.local:8123</a>登陆即可</p>
 <h3 id="想清除homeassistant-box-账户信息怎么弄">想清除Homeassistant Box 账户信息怎么弄？</h3>
 <p>如果用户名和密码都忘记了，或者你就是想单纯的清除账户信息</p>
@@ -161,13 +161,13 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 <p>在ha提示符后输入login回车</p>
 </li>
 </ol>
-<p><a href="#R-image-351574458dc554d934ee2284a7176f6b" class="lightbox-link"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-351574458dc554d934ee2284a7176f6b"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png"></a></p>
+<p><a href="#R-image-0743ec89f7932a624db7f562b9cfc067" class="lightbox-link"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0743ec89f7932a624db7f562b9cfc067"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png"></a></p>
 <ol start="3">
 <li>在#提示符下执行，注意是大写字母C</li>
 </ol>
-<div class="highlight wrap-code"><pre tabindex="0"><code>ha-install -C</code></pre></div><p><a href="#R-image-cd0b8c65dc6ab1654a9ecfd0d90fd0f7" class="lightbox-link"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cd0b8c65dc6ab1654a9ecfd0d90fd0f7"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png"></a></p>
+<div class="highlight wrap-code"><pre tabindex="0"><code>ha-install -C</code></pre></div><p><a href="#R-image-19a40e790b342c44fa0f9bfecf4f257f" class="lightbox-link"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-19a40e790b342c44fa0f9bfecf4f257f"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png"></a></p>
 <p>再回到<a href="http://homeassistant.local:8123" rel="external" target="_self">http://homeassistant.local:8123</a>登陆即可</p>
 <h3 id="重置homeassistant盒子恢复出厂设置">重置Homeassistant盒子，恢复出厂设置</h3>
 <ol>
@@ -182,8 +182,8 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 </li>
 </ol>
 <div class="highlight wrap-code"><pre tabindex="0"><code>rm -rf /mnt/data/supervisor/homeassistant/.storage/
-reboot</code></pre></div><p><a href="#R-image-d7ab605c9173fd84211d6fc48ab2fe45" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d7ab605c9173fd84211d6fc48ab2fe45"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></p>
+reboot</code></pre></div><p><a href="#R-image-8b5ec813a258a5b6c9999807c46126d7" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8b5ec813a258a5b6c9999807c46126d7"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></p>
 <h3 id="侧边栏没有supervisor菜单项">侧边栏没有supervisor菜单项</h3>
 <ol>
 <li>
@@ -198,10 +198,10 @@ reboot</code></pre></div><p><a href="#R-image-d7ab605c9173fd84211d6fc48ab2fe45" 
 </ol>
 <h3 id="connect-no-route-to-host">connect: no route to host</h3>
 <p>Get “http://supervisor/network/info“: dial tcp 172.30.32.2:80: connect: no route to host</p>
-<p><a href="#R-image-5783830d4076ad9dd990501bb92c77f8" class="lightbox-link"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5783830d4076ad9dd990501bb92c77f8"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png"></a></p>
-<p><a href="#R-image-333b76bc5efd3e056856e7d411cab20a" class="lightbox-link"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-333b76bc5efd3e056856e7d411cab20a"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png"></a></p>
+<p><a href="#R-image-edcddb6cdb97c8700889453a5f1b74a1" class="lightbox-link"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-edcddb6cdb97c8700889453a5f1b74a1"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png"></a></p>
+<p><a href="#R-image-3a18df15895631b899ec1374eacbe377" class="lightbox-link"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3a18df15895631b899ec1374eacbe377"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png"></a></p>
 <ol>
 <li>
 <p>访问<a href="http://homeassistant.local:7681/" rel="external" target="_self">http://homeassistant.local:7681</a></p>
@@ -320,13 +320,13 @@ wgturbo apply -D</code></pre></div>
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1734749095" defer></script>
-        <script src="../js/lunr/lunr.min.js?1734749095" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1734749095" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1734749095" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1734749095" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1734749095" defer></script>
-        <script src="../js/search.js?1734749095" defer></script>
+        <script src="../js/auto-complete.js?1735609162" defer></script>
+        <script src="../js/lunr/lunr.min.js?1735609162" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1735609162" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1735609162" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1735609162" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1735609162" defer></script>
+        <script src="../js/search.js?1735609162" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -344,6 +344,7 @@ wgturbo apply -D</code></pre></div>
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="../network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
+          <li data-nav-id="/network/free-vless-node-page/index.html" class=""><a class="padding" href="../network/free-vless-node-page/index.html">Cloudflare page搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class=""><a class="padding" href="../network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -422,9 +423,9 @@ wgturbo apply -D</code></pre></div>
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1734749095" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1734749095" defer></script>
-    <script src="../js/theme.js?1734749095" defer></script>
+    <script src="../js/clipboard.min.js?1735609162" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1735609162" defer></script>
+    <script src="../js/theme.js?1735609162" defer></script>
 
 
   </body>
