--- a/public/search.html
+++ b/public/search.html
@@ -26,17 +26,17 @@
     <title>搜索 :: HaBox 技术支持站</title>
     <link href="http://localhost:1313/search.html" rel="canonical" type="text/html" title="搜索 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1734749252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1734749252" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1734749252" rel="stylesheet">
-    <link href="./css/auto-complete.css?1734749252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1734749252" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1734749252" rel="stylesheet">
-    <link href="./css/fonts.css?1734749252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1734749252" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1734749252" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1734749252" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1734749252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1734749252" rel="stylesheet">
-    <link href="./css/print.css?1734749252" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1734749252"></script>
+    <link href="./css/fontawesome-all.min.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1735609162" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1735609162" rel="stylesheet">
+    <link href="./css/auto-complete.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1735609162" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1735609162" rel="stylesheet">
+    <link href="./css/fonts.css?1735609162" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1735609162" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1735609162" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1735609162" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1735609162" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1735609162" rel="stylesheet">
+    <link href="./css/print.css?1735609162" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1735609162"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -172,13 +172,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1734749252" defer></script>
-        <script src="./js/lunr/lunr.min.js?1734749252" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1734749252" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1734749252" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1734749252" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1734749252" defer></script>
-        <script src="./js/search.js?1734749252" defer></script>
+        <script src="./js/auto-complete.js?1735609162" defer></script>
+        <script src="./js/lunr/lunr.min.js?1735609162" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1735609162" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1735609162" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1735609162" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1735609162" defer></script>
+        <script src="./js/search.js?1735609162" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -196,6 +196,7 @@
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="./access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="./access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="./network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
+          <li data-nav-id="/network/free-vless-node-page/index.html" class=""><a class="padding" href="./network/free-vless-node-page/index.html">Cloudflare page搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class=""><a class="padding" href="./network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="./network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="./network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
@@ -274,9 +275,9 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1734749252" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1734749252" defer></script>
-    <script src="./js/theme.js?1734749252" defer></script>
+    <script src="./js/clipboard.min.js?1735609162" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1735609162" defer></script>
+    <script src="./js/theme.js?1735609162" defer></script>
 
 
   </body>
